# team-helper-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY_RENDER.md  LICENSE  QUICKSTART.md  README.md  START.md  env.example  pyproject.toml  render.yaml  requirements-render.txt  run.sh  setup.py  setup.sh  start.sh
cli/: __init__.py  cli.py
config/: config.example.yaml  config.render.yaml
docker/: .dockerignore  Dockerfile.api  README.md  docker-compose.dev.yml  docker-compose.yml  init-db.sql  init-models.sh
docs/: ARCHITECTURE.md
frontend/: index-adadadadad.html  index-final.html  index.html
models/: .gitignore  README.md
scripts/: README.md  download_models.py  download_models.sh  init_db.py  remove_doc.py  update_urls.py
scripts/models/huggingface/bge-reranker-v2-m3/: config.json  tokenizer_config.json
scripts/models/huggingface/multilingual-e5-large/: config.json  config_sentence_transformers.json
src/rag_system/: __init__.py  config.py  exceptions.py  main.py
src/rag_system/api/: dependencies.py
src/rag_system/api/routes/: health.py  query.py  trace.py  webhook.py
src/rag_system/models/: __init__.py  api.py  database.py  domain.py
src/rag_system/providers/: __init__.py  database.py  embedder.py  llm.py  reranker_model.py  vision.py
src/rag_system/services/: ingestion_service.py  query_service.py
src/rag_system/workers/: __init__.py
src/rag_system/workers/ingestion/: __init__.py  database_writer.py  embedder.py  git_fetcher.py  image_processor.py  markdown_parser.py
src/rag_system/workers/query/: __init__.py  answer_generator.py  context_builder.py  evidence_filter.py  hybrid_searcher.py  query_validator.py  reranker.py  trace_logger.py
